# CMakeList.txt : CMake project for Labb_1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Labb_1")

# Add source to this project's executable.
add_executable (Labb_1 "Labb_1.cpp" "Labb_1.h" "int_buffer.h" "int_buffer.cpp")

# TODO: Add tests and install targets if needed.
